test/extern/ExternBlockClangError.good
ExternBlockClangError.chpl:1: error: error running clang on extern block -- clang errors follow:
ExternBlockClangError.chpl:3: note: error: no previous prototype for function 'bar'
